# gsvr.rs

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  dockerfile  makefile  package-lock.json
admin/: Cargo.toml  package-lock.json  package.json  tsconfig.json
admin-ui/plugins/tauri-plugin-clientmgr/: Cargo.toml  README.md  package.json
admin-ui/plugins/tauri-plugin-clientmgr/.changes/: config.json  initial-release.md  readme.md
admin-ui/plugins/tauri-plugin-clientmgr/examples/svelte-app/: package.json
admin-ui/plugins/tauri-plugin-clientmgr/examples/svelte-app/src/: App.svelte
admin-ui/plugins/tauri-plugin-clientmgr/examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
admin-ui/plugins/tauri-plugin-clientmgr/examples/svelte-app/src-tauri/src/: main.rs
admin-ui/plugins/tauri-plugin-clientmgr/src/: api.rs  error.rs  lib.rs  state.rs
admin-ui/plugins/tauri-plugin-clientmgr/webview-dist/: index.d.ts  index.js
admin-ui/plugins/tauri-plugin-clientmgr/webview-src/: index.ts
admin-ui/plugins/tauri-plugin-pbhint/: Cargo.toml  README.md  package.json
admin-ui/plugins/tauri-plugin-pbhint/.changes/: config.json  initial-release.md  readme.md
admin-ui/plugins/tauri-plugin-pbhint/examples/svelte-app/: package.json
admin-ui/plugins/tauri-plugin-pbhint/examples/svelte-app/src/: App.svelte
admin-ui/plugins/tauri-plugin-pbhint/examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
admin-ui/plugins/tauri-plugin-pbhint/src/: lib.rs
admin-ui/plugins/tauri-plugin-pbhint/webview-dist/: index.d.ts  index.js
admin-ui/plugins/tauri-plugin-pbhint/webview-src/: index.ts
admin-ui/src-tauri/: Cargo.toml  tauri.conf.json
admin-ui/src-tauri/src/: main.rs
admin/plugins/tauri-plugin-agentmgr/: Cargo.toml  README.md  package.json
admin/plugins/tauri-plugin-agentmgr/.changes/: config.json  initial-release.md  readme.md
admin/plugins/tauri-plugin-agentmgr/examples/svelte-app/: package.json
admin/plugins/tauri-plugin-agentmgr/examples/svelte-app/src/: App.svelte
admin/plugins/tauri-plugin-agentmgr/examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
admin/plugins/tauri-plugin-agentmgr/src/: agentmgr.rs  cmds.rs  lib.rs
admin/plugins/tauri-plugin-agentmgr/src/agent/: gate_agent.rs  mod.rs
admin/plugins/tauri-plugin-agentmgr/webview-dist/: agentmgr.d.ts  gate.d.ts  history.d.ts  index.d.ts  index.js  pf.d.ts
admin/plugins/tauri-plugin-agentmgr/webview-src/: agentmgr.ts  gate.ts  history.ts  index.ts  pf.ts
admin/plugins/tauri-plugin-hint/: Cargo.toml  README.md  package.json
admin/plugins/tauri-plugin-hint/.changes/: config.json  initial-release.md  readme.md
admin/plugins/tauri-plugin-hint/examples/svelte-app/: package.json
admin/plugins/tauri-plugin-hint/examples/svelte-app/src/: App.svelte
admin/plugins/tauri-plugin-hint/examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
admin/plugins/tauri-plugin-hint/src/: cmds.rs  hint.rs  lib.rs
admin/plugins/tauri-plugin-hint/webview-dist/: hint.d.ts  index.d.ts  index.js  pair.d.ts
admin/plugins/tauri-plugin-hint/webview-src/: hint.ts  index.ts  pair.ts
admin/src/: App.vue  cli.rs  exec.rs  lib.rs  main.rs  main.ts  proto.rs
admin/src-tauri/: Cargo.toml  tauri.conf.json
admin/src-tauri/src/: agentmgr.rs  cmds.rs  main.rs
admin/src-tauri/src/agent/: codec.rs  gate_agent.rs  mod.rs  pf_agent.rs
admin/src/client/: adaptor.rs  client.rs  codec.rs  console_adaptor.rs  fast_login_client.rs  gclient.rs  histroy.rs  misc.rs  mod.rs  nclient.rs
admin/src/cmd/: agent_cmd.rs  bench.rs  client.rs  fclient.rs  line_decoder.rs  mod.rs
admin/src/components/: AddAgent.vue  AddClient.vue  GateAgent.vue  History.vue  PfAgent.vue
admin/src/hooks/: agent.ts  index.ts
admin/src/route/: index.tsx
admin/src/views/: Bench.vue  Client.vue  Gm.vue  Home.vue
cspb/: Cargo.toml  build.rs
cspb/proto/: 01_player.proto  Enum.proto  registry.proto
cspb/src/: cspb.msg.rs  cspb.r#enum.rs  cspb.registry.rs  lib.rs
game/: Cargo.toml
game/game-core/: Cargo.toml
game/game-core/src/: lib.rs
game/game-core/src/broker/: ctx.rs  mod.rs
game/game-core/src/component/: builder.rs  mod.rs
game/game-core/src/plugin/: builder.rs  mod.rs
game/game-core/src/server/: builder.rs  mod.rs
game/src/: error.rs  main.rs
game/src/conf/: mod.rs
game/src/db/: builder.rs  handler.rs  mod.rs
game/src/hub/: ctx.rs  mod.rs  proto.rs
game/src/nats/: builder.rs  handler.rs  mod.rs
game/src/play/: builder.rs  handler.rs  mod.rs
game/src/play/player/: api.rs  basic.rs  mod.rs
game/src/play/player_mgr/: api.rs  mod.rs
game/src/timer/: builder.rs  handler.rs  mod.rs
gate/: Cargo.toml
services/game/: Cargo.toml
services/game/src/: error.rs  main.rs
services/game/src/conf/: mod.rs
services/game/src/db/: builder.rs  handler.rs  mod.rs  proto.rs
services/game/src/hub/: mod.rs  proto.rs
services/game/src/nats/: builder.rs  handler.rs  mod.rs  proto.rs
services/game/src/play/: builder.rs  handler.rs  mod.rs  proto.rs
services/game/src/play/item/: mod.rs
services/game/src/play/item_mgr/: api.rs  mod.rs
services/game/src/play/player/: api.rs  basic.rs  dbplayer.rs  mod.rs  player.rs  state.rs
services/game/src/play/playermgr/: api.rs  mod.rs  playerloader.rs  playermgr.rs
services/game/src/play/worker/: mod.rs  worker.rs
services/game/src/play/worker/handle/: mod.rs
services/game/src/timer/: builder.rs  desc.rs  handler.rs  kind.rs  mod.rs  proto.rs
services/gate/: Cargo.toml
services/gate/src/: adaptor.rs  codec.rs  error.rs  main.rs
services/gate/src/conf/: mod.rs
services/pf/: Cargo.toml
services/pf/src/: main.rs
services/pf/src/conf/: mod.rs
services/pf/src/grpc/: mod.rs
services/pf/src/grpc/api/: auth.rs  mod.rs
services/pf/src/http/: mod.rs
services/pf/src/http/api/v1/: account.rs  mod.rs  player.rs
services/pf/src/models/: account.rs  claim.rs  mod.rs  player.rs  result.rs
util/: Cargo.toml
util/src/: etcd.rs  gconf.rs  jwt.rs  lib.rs  logger.rs  mongo.rs  nats.rs  password.rs  pgpool.rs
util/src/custom_serde/: mod.rs  str_duration.rs
(+68 files in other folders)
