[workspace]
members = [
	"services/gate",
	"services/game",
	"services/pf",
	"services/spb",
	"cspb",
	"util",
	"admin/src-tauri",
	"admin/plugins/tauri-plugin-agentmgr",
	"admin/plugins/tauri-plugin-hint",
]

[workspace.dependencies]
# gsfw = {git = "https://github.com/EequalsMCsquare/gsfw.rs.git", branch = "master", features = ["util", "derive"]}
gsfw = {path = "../gsfw/gsfw", features = ["util", "derive"]}
# gsfw = {version = "0.1.1", features = ["util"]}
async-trait = "0.1.57"
parking_lot = { version = "0.12", features = ['serde'] }
util = { path = "./util" }
cspb = { path = "./cspb" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "^0.7", features = ["codec"] }
bytes = "1.2"
pin-project = "1"
serde = { version = "*", features = ["derive"] }
anyhow = { version = "1" }
tracing = { version = "0.1.30" }
async-nats = "0.20"
futures = "0.3"
tower = "0.4"
prost = "0.11"
config = { version = "0.13" }
hashbrown = "0.12"
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
time = "0.3.16"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "time", "json", "offline"] }
once_cell = { version = "1.16.0" }
tonic = { version = "0.8.2" }