[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "admin"
path = "src/main.rs"


[dependencies]
parking_lot = { workspace = true }
tower = { workspace = true }
cspb = { workspace = true }
util = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
anyhow = { worksapce = true }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
slice-deque = { workspace = true }
gsfw = { workspace = true }
async-trait = { workspace = true }
strum = {workspace = true }
clap = { version = "4.0", features = ["derive"] }
crossbeam = "0.8.2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = { workspace = true }
requestty = { version = "0.5.0" }
shell-words = "1.0.0"
once_cell = { workspace = true }
fst = "0.4.7"