[package]
name = "cspb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true}
tokio-util = { workspace = true }
prost = { workspace = true }
serde_json = {workspace = true }
strum = {workspace = true}
gsfw = {workspace = true, features=["util", "derive"]}
once_cell = "1"

[build-dependencies]
prost-build = "0.11.1"
