[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-core = {path = "./game-core"}
thiserror = {workspace = true}
util = { workspace = true }
gconf = { workspace = true }
pb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true}
async-nats = { workspace = true}
prost = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tower = {workspace = true}
config = {workspace = true}
hashbrown = {workspace = true}
async-trait = {workspace = true}
mongodb = {workspace = true}
time = {workspace = true}
slice-deque = {workspace = true}
parking_lot = {workspace = true}
pin-project = {workspace = true}
derivative = {workspace = true}