[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gconf = { workspace = true }
anyhow = {workspace = true}
async-nats = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = {version = "^0.2.2"}