[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gsfw = { workspace = true, features = ["util"] }
anyhow = {workspace = true}
async-nats = {workspace = true}
tracing = {workspace = true}
serde = { workspace = true }
time ={ workspace = true  }
sqlx = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
tracing-appender = {version = "^0.2.2"}
jsonwebtoken = "8.1.1"
pbkdf2 = "0.11.0"
rand_core = { version = "0.6", features = ["std"] }
once_cell ={ workspace = true }
regex = "1.7.0"
etcd-client = "0.10"
prost = "*"

[dev-dependencies]
serde_json = { version = "*"}