[package]
name = "admin-ui"
version = "0.0.0"
description = "A Tauri App"
authors = ["Xiao ZHONG"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
tauri = { version = "1.1", features = ["api-all"] }
once_cell = "1"
regex = "1.5"
util = { workspace = true }
gconf = { workspace = true }
tracing = { workspace = true }
tokio = {workspace = true}
tauri-plugin-clientmgr = { path = "../plugins/tauri-plugin-clientmgr"}
tauri-plugin-pbhint= { path = "../plugins/tauri-plugin-pbhint"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
