[package]
name = "admin"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
gsfw = { workspace = true }
cspb = { workspace = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2.2", features = [] }
anyhow = { version = "1"}
bytes = "1.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
parking_lot = "0.12"
dashmap = "5.4.0"
tracing = { version = "0.1.30" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-agentmgr = { path = "../plugins/tauri-plugin-agentmgr" }
tauri-plugin-hint = { path = "../plugins/tauri-plugin-hint" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
