[package]
name = "game-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace = true}
anyhow = {workspace = true}
tracing = { workspace = true}
async-trait = { workspace = true }
hashbrown = {workspace = true}
futures = {workspace = true}
slice-deque = {workspace = true}
pin-project = {workspace = true}