[package]
name = "gate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { workspace = true }
gconf = { workspace = true }
cspb = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
anyhow = { workpsace = true }
async-nats = { workspace = true }
tower = { workspace = true }
serde = { workspace = true}
pin-project = { workpsace = true}
config = {workspace = true}
tokio-util = { workspace = true }
gsfw = {workspace = true}
async-trait = {workspace = true}
thiserror = {workspace = true}