[package]
name = "pf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.17", features = ["headers"]}
validator = { version = "0.16.0", features = ["derive"] }
spb = { path = "../spb" }
tonic = { workspace = true }
once_cell = { workspace = true }
util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
config = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
