[package]
name = "tauri-plugin-pbhint"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.57"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.1.1" }
thiserror = "1.0"
pb = { workspace = true}
serde = { workspace = true }
serde_json ={ workspace = true }
hashbrown = {workspace = true}
strum = {workspace = true}
tracing = {workspace = true}