[package]
name = "tauri-plugin-agentmgr"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.59"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
gsfw = { workspace = true }
cspb = { workspace = true }
tauri = { version = "1.2.2" }
serde = "1.0"
serde_json = "1.0"
anyhow = { version = "1"}
bytes = "1.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
parking_lot = "0.12"
dashmap = "5.4.0"
tracing = { version = "0.1.30" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
