[package]
name = "tauri-plugin-hint"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.59"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.2.2" }
serde = "1.0"
serde_json = "1.0"
tracing = { version = "0.1.30" }
gsfw = { workspace = true }
cspb = { workspace = true }